--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
       <div class="header__dark-mode-switch-container">
         <label class="header__dark-mode-label" for="dark-mode-switch">Dark Mode</label>
-        <span 
+        <button 
           class="header__dark-mode-switch" 
           id="dark-mode-switch" 
           role="switch" 
           aria-checked="false">
           <span class="header__dark-mode-switch--inner-circle"></span>
-        </span>
+        </button>
       </div>
 
     </header>
