Added type="button" to button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <div class="header__dark-mode-switch-container">
         <label class="header__dark-mode-label" for="dark-mode-switch">Dark Mode</label>
         <button 
-          class="header__dark-mode-switch" 
+          class="header__dark-mode-switch"
+          type="button"
           id="dark-mode-switch" 
           role="switch" 
           aria-checked="false">
